refactored dimensions wqith clearer names for margins values fixed some formatting/clean code issues refactor tasks in gradles updated dependencies

--- a/commons/src/main/res/layout/dialog_bottom_big_button.xml
+++ b/commons/src/main/res/layout/dialog_bottom_big_button.xml
@@ -37,10 +37,10 @@
         android:id="@+id/dialog_bottom_big_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_xxl"
-        android:layout_marginBottom="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/double_margin"
+        android:layout_marginBottom="@dimen/double_margin"
         android:backgroundTint="?attr/colorSecondary"
-        android:padding="@dimen/medium_space"
+        android:padding="@dimen/single_margin"
         android:textColor="?attr/colorOnSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
