--- a/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
@@ -37,9 +37,9 @@
         android:id="@+id/dialog_bottom_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/space_xxl"
-        android:layout_marginTop="@dimen/space_xxl"
-        android:layout_marginEnd="@dimen/space_xxl"
+        android:layout_marginStart="@dimen/double_margin"
+        android:layout_marginTop="@dimen/double_margin"
+        android:layout_marginEnd="@dimen/double_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textAlignment="center"
@@ -52,9 +52,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/medium_space"
-        android:layout_marginBottom="@dimen/medium_space"
-        android:padding="@dimen/medium_space"
+        android:layout_marginEnd="@dimen/single_margin"
+        android:layout_marginBottom="@dimen/single_margin"
+        android:padding="@dimen/single_margin"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
