--- a/commons/src/main/res/layout/dialog_bottom_ringtone_picker_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_ringtone_picker_and_confirm.xml
@@ -39,9 +39,9 @@
         android:id="@+id/dialog_bottom_recycler"
         android:layout_width="match_parent"
         android:layout_height="360dp"
-        android:layout_marginStart="@dimen/medium_space"
-        android:layout_marginTop="@dimen/space_xxl"
-        android:layout_marginEnd="@dimen/medium_space"
+        android:layout_marginStart="@dimen/single_margin"
+        android:layout_marginTop="@dimen/double_margin"
+        android:layout_marginEnd="@dimen/single_margin"
         android:orientation="vertical"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,9 +55,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/medium_space"
-        android:layout_marginBottom="@dimen/medium_space"
-        android:padding="@dimen/medium_space"
+        android:layout_marginEnd="@dimen/single_margin"
+        android:layout_marginBottom="@dimen/single_margin"
+        android:padding="@dimen/single_margin"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
