--- a/commons/src/main/res/layout/dialog_bottom_spinners_duration_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_spinners_duration_and_confirm.xml
@@ -37,7 +37,7 @@
         android:id="@+id/dialog_bottom_duration_pickers_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_xs"
+        android:layout_marginTop="@dimen/half_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button">
@@ -46,7 +46,7 @@
             android:id="@+id/dialog_bottom_duration_hours_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/space_xs"
+            android:layout_marginEnd="@dimen/half_margin"
             android:descendantFocusability="blocksDescendants"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +55,7 @@
             android:id="@+id/dialog_bottom_duration_hours_unit"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
-            android:layout_marginStart="@dimen/space_xs"
+            android:layout_marginStart="@dimen/half_margin"
             android:text="@string/generic_string_SHORT_HOURS"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -67,8 +67,8 @@
             android:id="@+id/dialog_bottom_duration_minutes_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
-            android:layout_marginEnd="@dimen/space_xs"
+            android:layout_marginStart="@dimen/half_margin"
+            android:layout_marginEnd="@dimen/half_margin"
             android:descendantFocusability="blocksDescendants"
             app:layout_constraintStart_toEndOf="@+id/dialog_bottom_duration_hours_unit"
             app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +77,7 @@
             android:id="@+id/dialog_bottom_duration_minutes_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
+            android:layout_marginStart="@dimen/half_margin"
             android:text="@string/generic_string_SHORT_MINUTES"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -89,8 +89,8 @@
             android:id="@+id/dialog_bottom_duration_seconds_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
-            android:layout_marginEnd="@dimen/space_xs"
+            android:layout_marginStart="@dimen/half_margin"
+            android:layout_marginEnd="@dimen/half_margin"
             android:descendantFocusability="blocksDescendants"
             app:layout_constraintStart_toEndOf="@+id/dialog_bottom_duration_minutes_unit"
             app:layout_constraintTop_toTopOf="parent" />
@@ -99,8 +99,8 @@
             android:id="@+id/dialog_bottom_duration_seconds_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xs"
-            android:layout_marginEnd="@dimen/space_xs"
+            android:layout_marginStart="@dimen/half_margin"
+            android:layout_marginEnd="@dimen/half_margin"
             android:text="@string/generic_string_SHORT_SECONDS"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -114,9 +114,9 @@
         android:id="@+id/dialog_bottom_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/space_xs"
-        android:layout_marginTop="@dimen/space_xs"
-        android:layout_marginEnd="@dimen/space_xs"
+        android:layout_marginStart="@dimen/half_margin"
+        android:layout_marginTop="@dimen/half_margin"
+        android:layout_marginEnd="@dimen/half_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_duration_pickers_holder"
@@ -127,9 +127,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/medium_space"
-        android:layout_marginBottom="@dimen/medium_space"
-        android:padding="@dimen/medium_space"
+        android:layout_marginEnd="@dimen/single_margin"
+        android:layout_marginBottom="@dimen/single_margin"
+        android:padding="@dimen/single_margin"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
