--- a/commons/src/main/res/layout/dialog_bottom_title_zone_with_dismiss_button.xml
+++ b/commons/src/main/res/layout/dialog_bottom_title_zone_with_dismiss_button.xml
@@ -31,7 +31,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:padding="@dimen/space_s"
+        android:padding="@dimen/three_quarter_margin"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/dialog_bottom_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/space_xs"
+        android:layout_marginStart="@dimen/half_margin"
         android:backgroundTint="?attr/colorPrimary"
         android:textAlignment="viewStart"
         android:textColor="?attr/colorOnPrimary"
