--- a/screens/src/main/res/layout/dialog_session_preset.xml
+++ b/screens/src/main/res/layout/dialog_session_preset.xml
@@ -21,13 +21,13 @@
             android:id="@+id/audio_guide_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_xxl"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginTop="@dimen/double_margin"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/duration_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,12 +57,12 @@
             android:id="@+id/duration_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/start_end_sound_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,12 +92,12 @@
             android:id="@+id/start_end_sound_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/countdown_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,12 +127,12 @@
             android:id="@+id/countdown_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/interval_length_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -162,12 +162,12 @@
             android:id="@+id/interval_length_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/interval_sound_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -197,12 +197,12 @@
             android:id="@+id/interval_sound_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@+id/vibration_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,12 +232,12 @@
             android:id="@+id/vibration_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/single_and_quarter_margin"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/space_xs"
-            android:paddingBottom="@dimen/space_xs"
+            android:paddingTop="@dimen/half_margin"
+            android:paddingBottom="@dimen/half_margin"
             app:layout_constraintBottom_toTopOf="@id/session_preset_delete_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -263,9 +263,9 @@
             android:id="@+id/session_preset_delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_xxl"
+            android:layout_marginBottom="@dimen/double_margin"
             android:backgroundTint="?attr/colorSecondary"
-            android:padding="@dimen/medium_space"
+            android:padding="@dimen/single_margin"
             android:text="@string/generic_string_DELETE"
             android:textColor="?attr/colorOnSecondary"
             app:layout_constraintBottom_toBottomOf="parent"
