--- a/screens/src/main/res/layout/fragment_home.xml
+++ b/screens/src/main/res/layout/fragment_home.xml
@@ -49,8 +49,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/item_timed_session_preset_view_holder"
-        android:paddingStart="@dimen/space_xs"
-        android:paddingEnd="@dimen/space_xs"
+        android:paddingStart="@dimen/half_margin"
+        android:paddingEnd="@dimen/half_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,8 +61,8 @@
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
         android:src="@drawable/add_sign"
-        android:layout_marginEnd="@dimen/space_xl"
-        android:layout_marginBottom="@dimen/space_xl"
+        android:layout_marginEnd="@dimen/single_and_half_margin"
+        android:layout_marginBottom="@dimen/single_and_half_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/content_description_add_new_preset" />
