--- a/screens/src/main/res/layout/item_audio_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_audio_session_preset_view_holder.xml
@@ -32,7 +32,7 @@
             android:id="@+id/audio_session_preset_preset_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_xl"
+            android:layout_marginTop="@dimen/single_and_half_margin"
             android:text="@string/audio_session_preset_title"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
@@ -64,8 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="@dimen/space_xxs"
-            android:layout_marginBottom="@dimen/space_xl"
+            android:layout_marginEnd="@dimen/quarter_margin"
+            android:layout_marginBottom="@dimen/single_and_half_margin"
             android:ellipsize="end"
             android:text="@string/duration"
             android:textAlignment="center"
@@ -82,7 +82,7 @@
             android:id="@+id/audio_session_duration_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xxs"
+            android:layout_marginStart="@dimen/quarter_margin"
             android:ellipsize="end"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
