--- a/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
@@ -32,7 +32,7 @@
             android:id="@+id/timed_session_preset_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_xl"
+            android:layout_marginTop="@dimen/single_and_half_margin"
             android:text="@string/timed_session_preset_title"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/title_level_2_text_size"
@@ -47,9 +47,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="@dimen/medium_space"
-            android:layout_marginEnd="@dimen/space_xxs"
-            android:layout_marginBottom="@dimen/space_xl"
+            android:layout_marginTop="@dimen/single_margin"
+            android:layout_marginEnd="@dimen/quarter_margin"
+            android:layout_marginBottom="@dimen/single_and_half_margin"
             android:ellipsize="end"
             android:text="@string/duration"
             android:textAlignment="center"
@@ -66,8 +66,8 @@
             android:id="@+id/timed_session_duration_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xxs"
-            android:layout_marginTop="@dimen/medium_space"
+            android:layout_marginStart="@dimen/quarter_margin"
+            android:layout_marginTop="@dimen/single_margin"
             android:layout_marginEnd="0dp"
             android:ellipsize="end"
             android:textAlignment="center"
@@ -94,8 +94,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="@dimen/medium_space"
-            android:layout_marginEnd="@dimen/space_xxs"
+            android:layout_marginTop="@dimen/single_margin"
+            android:layout_marginEnd="@dimen/quarter_margin"
             android:ellipsize="end"
             android:text="@string/interval"
             android:textAlignment="center"
@@ -112,8 +112,8 @@
             android:id="@+id/timed_session_interval_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_xxs"
-            android:layout_marginTop="@dimen/medium_space"
+            android:layout_marginStart="@dimen/quarter_margin"
+            android:layout_marginTop="@dimen/single_margin"
             android:layout_marginEnd="0dp"
             android:ellipsize="end"
             android:textAlignment="center"
