--- a/commons/src/main/res/layout/dialog_bottom_error_message.xml
+++ b/commons/src/main/res/layout/dialog_bottom_error_message.xml
@@ -22,7 +22,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
     android:backgroundTint="?attr/colorSurface"
-    android:paddingBottom="@dimen/space_l"
+    android:paddingBottom="@dimen/single_and_quarter_margin"
     android:orientation="vertical">
 
     <include
@@ -38,7 +38,7 @@
         android:id="@+id/dialog_bottom_warning_icon"
         android:layout_width="wrap_content"
         android:layout_height="64dp"
-        android:layout_marginTop="@dimen/space_l"
+        android:layout_marginTop="@dimen/single_and_quarter_margin"
         android:adjustViewBounds="true"
         android:contentDescription="@string/content_description_close_button"
         android:scaleType="fitCenter"
@@ -51,9 +51,9 @@
         android:id="@+id/dialog_bottom_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/space_xxl"
-        android:layout_marginTop="@dimen/space_xl"
-        android:layout_marginEnd="@dimen/space_xxl"
+        android:layout_marginStart="@dimen/double_margin"
+        android:layout_marginTop="@dimen/single_and_half_margin"
+        android:layout_marginEnd="@dimen/double_margin"
         android:textAlignment="center"
         android:textColor="?attr/colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
