--- a/commons/src/main/res/layout/dialog_fullscreen_title_zone.xml
+++ b/commons/src/main/res/layout/dialog_fullscreen_title_zone.xml
@@ -31,7 +31,7 @@
         android:scaleType="fitCenter"
         android:clickable="true"
         android:focusable="true"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/single_and_quarter_margin"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         app:srcCompat="@drawable/ic_cross"
@@ -58,7 +58,7 @@
         android:scaleType="fitCenter"
         android:clickable="true"
         android:focusable="true"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/single_and_quarter_margin"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         app:srcCompat="@drawable/ic_check"
