--- a/commons/src/main/res/layout/dialog_bottom_error_message.xml
+++ b/commons/src/main/res/layout/dialog_bottom_error_message.xml
@@ -22,8 +22,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
     android:backgroundTint="?attr/colorSurface"
-    android:paddingBottom="@dimen/single_and_quarter_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/single_and_quarter_margin">
 
     <include
         android:id="@+id/dialog_bottom_title_zone_with_dismiss_button"
@@ -40,8 +40,8 @@
         android:layout_height="64dp"
         android:layout_marginTop="@dimen/single_and_quarter_margin"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/content_description_close_button"
         android:scaleType="fitCenter"
+        android:contentDescription="@string/content_description_close_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_bottom_title_zone_with_dismiss_button"
