Fab speed Dial is working for appear & disappear effects. mini fabs in the speed dial still have fake icons

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <!--Components-->
     <dimen name="fab_speed_dial_item_height">48dp</dimen>
     <dimen name="fab_speed_dial_item_vertical_space">@dimen/single_margin</dimen>
+    <dimen name="fab_right_padding">@dimen/single_and_half_margin</dimen>
 
 
 </resources>
