--- a/commons/src/main/res/layout/layout_widget_fab_speed_dial.xml
+++ b/commons/src/main/res/layout/layout_widget_fab_speed_dial.xml
@@ -20,10 +20,9 @@
     android:id="@+id/fab_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/single_and_half_margin"
     android:paddingTop="@dimen/eighth_margin"
     android:paddingStart="@dimen/eighth_margin"
-    android:paddingEnd="@dimen/single_and_half_margin"
+    android:paddingBottom="@dimen/single_and_half_margin"
     android:clipChildren="false"
     android:clipToPadding="false">
 
@@ -33,6 +32,7 @@
         android:layout_width="@dimen/standard_fab_size"
         android:layout_height="@dimen/standard_fab_size"
         android:visibility="visible"
+        android:layout_marginEnd="@dimen/fab_right_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:icon="@drawable/plus" />
