--- a/commons/src/main/res/layout/layout_widget_fab_speed_dial_item.xml
+++ b/commons/src/main/res/layout/layout_widget_fab_speed_dial_item.xml
@@ -14,23 +14,30 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:paddingTop="@dimen/eighth_margin"
+    android:paddingStart="@dimen/eighth_margin"
+    android:paddingBottom="@dimen/single_margin"
+    android:paddingEnd="@dimen/fab_right_padding"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <com.google.android.material.chip.Chip
         android:id="@+id/fab_speed_dial_item_label"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/mini_fab_label_height"
-        android:layout_marginEnd="@dimen/single_margin"
-        android:layout_toStartOf="@id/fab_speed_dial_item_icon"
-        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="?attr/colorSurface"
         android:textColor="?attr/colorOnSurface"
         android:textSize="@dimen/normal_text_size"
         app:ensureMinTouchTargetSize="false"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_speed_dial_item_icon"
+        app:layout_constraintEnd_toStartOf="@+id/fab_speed_dial_item_icon"
+        app:layout_constraintTop_toTopOf="@+id/fab_speed_dial_item_icon"
         tools:text="label" />
 
     <com.google.android.material.button.MaterialButton
@@ -38,9 +45,9 @@
         style="@style/FloatingActionButton"
         android:layout_width="@dimen/mini_fab_size"
         android:layout_height="@dimen/mini_fab_size"
-        tools:icon="@drawable/plus"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="@dimen/mini_fab_end_margin"
-        android:layout_centerVertical="true"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:icon="@drawable/plus" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
