--- a/screens/src/main/res/layout/dialog_session_preset_audio_free.xml
+++ b/screens/src/main/res/layout/dialog_session_preset_audio_free.xml
@@ -17,77 +17,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/audio_guide_zone"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/dialog_session_preset_explanation"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/double_margin"
-            android:layout_marginBottom="@dimen/single_and_quarter_margin"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/half_margin"
-            android:paddingBottom="@dimen/half_margin"
-            app:layout_constraintBottom_toTopOf="@+id/duration_zone"
+            android:text="@string/session_preset_audio_free_explanation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dialog_session_preset_title_zone">
-
-            <TextView
-                android:id="@+id/audio_guide_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/audio_guide"
-                android:textAlignment="center"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="@dimen/title_level_2_text_size"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/audio_guide_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="@dimen/normal_text_size"
-                tools:text="What shall we do with a drunken sailor?" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/duration_zone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/single_and_quarter_margin"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/half_margin"
-            android:paddingBottom="@dimen/half_margin"
-            app:layout_constraintBottom_toTopOf="@+id/start_end_sound_zone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/audio_guide_zone">
-
-            <TextView
-                android:id="@+id/duration_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/duration"
-                android:textAlignment="center"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="@dimen/title_level_2_text_size"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/duration_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="@dimen/normal_text_size"
-                tools:text="1h 25mn" />
-        </LinearLayout>
-
+            app:layout_constraintTop_toBottomOf="@id/dialog_session_preset_title_zone" />
         <LinearLayout
             android:id="@+id/start_end_sound_zone"
             android:layout_width="match_parent"
@@ -101,7 +38,7 @@
             app:layout_constraintBottom_toTopOf="@+id/countdown_zone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/duration_zone">
+            app:layout_constraintTop_toBottomOf="@id/dialog_session_preset_explanation">
 
             <TextView
                 android:id="@+id/start_end_sound_label"
