--- a/screens/src/main/res/navigation/navigation.xml
+++ b/screens/src/main/res/navigation/navigation.xml
@@ -25,7 +25,7 @@
         android:id="@+id/navigation_home"
         android:name="fr.shining_cat.everyday.screens.views.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_navigation_home_to_session_preset_dialog_audio"
             app:destination="@id/navigation_session_preset_dialog_audio" />
@@ -43,45 +43,45 @@
     <dialog
         android:id="@+id/navigation_session_preset_dialog_audio"
         android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
-        tools:layout="@layout/dialog_session_preset_audio" >
+        tools:layout="@layout/dialog_session_preset_audio">
         <argument
             android:name="preset"
-            app:argType="fr.shining_cat.everyday.models.SessionPreset.AudioSessionPreset"
-            app:nullable="true"
-            android:defaultValue="@null"/>
+            android:defaultValue="@null"
+            app:argType="fr.shining_cat.everyday.models.SessionPreset$AudioSessionPreset"
+            app:nullable="true" />
     </dialog>
 
     <dialog
         android:id="@+id/navigation_session_preset_dialog_audio_free"
-        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
-        tools:layout="@layout/dialog_session_preset_audio_free" >
+        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioFreeSessionPresetDialog"
+        tools:layout="@layout/dialog_session_preset_audio_free">
         <argument
             android:name="preset"
-            app:argType="fr.shining_cat.everyday.models.SessionPreset.AudioFreeSessionPreset"
-            app:nullable="true"
-            android:defaultValue="@null"/>
+            android:defaultValue="@null"
+            app:argType="fr.shining_cat.everyday.models.SessionPreset$AudioFreeSessionPreset"
+            app:nullable="true" />
     </dialog>
 
     <dialog
         android:id="@+id/navigation_session_preset_dialog_timed"
-        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
-        tools:layout="@layout/dialog_session_preset_timed" >
+        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.TimedSessionPresetDialog"
+        tools:layout="@layout/dialog_session_preset_timed">
         <argument
             android:name="preset"
-            app:argType="fr.shining_cat.everyday.models.SessionPreset.TimedSessionPreset"
-            app:nullable="true"
-            android:defaultValue="@null"/>
+            android:defaultValue="@null"
+            app:argType="fr.shining_cat.everyday.models.SessionPreset$TimedSessionPreset"
+            app:nullable="true" />
     </dialog>
 
     <dialog
         android:id="@+id/navigation_session_preset_dialog_timed_free"
-        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.AudioSessionPresetDialog"
-        tools:layout="@layout/dialog_session_preset_timed_free" >
+        android:name="fr.shining_cat.everyday.screens.views.home.sessionpresetdialogs.TimedFreeSessionPresetDialog"
+        tools:layout="@layout/dialog_session_preset_timed_free">
         <argument
             android:name="preset"
-            app:argType="fr.shining_cat.everyday.models.SessionPreset.TimedFreeSessionPreset"
-            app:nullable="true"
-            android:defaultValue="@null"/>
+            android:defaultValue="@null"
+            app:argType="fr.shining_cat.everyday.models.SessionPreset$TimedFreeSessionPreset"
+            app:nullable="true" />
     </dialog>
 
     <fragment
