--- a/screens/src/main/res/layout/item_audio_free_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_audio_free_session_preset_view_holder.xml
@@ -33,65 +33,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/single_and_half_margin"
-            android:text="@string/audio_session_preset_title"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="@dimen/title_level_2_text_size"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/audio_session_preset_file_description"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread" />
-
-        <TextView
-            android:id="@+id/audio_session_preset_file_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/audio_session_preset_title"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="@dimen/title_level_2_text_size"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/audio_session_duration_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/audio_session_preset_preset_title" />
-
-        <TextView
-            android:id="@+id/audio_session_duration_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="@dimen/quarter_margin"
             android:layout_marginBottom="@dimen/single_and_half_margin"
-            android:ellipsize="end"
-            android:text="@string/duration"
+            android:text="@string/audio_free_session_preset_title"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
-            android:textSize="@dimen/normal_text_size"
+            android:textSize="@dimen/title_level_2_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/audio_session_duration_value"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/audio_session_preset_file_description" />
-
-        <TextView
-            android:id="@+id/audio_session_duration_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/quarter_margin"
-            android:ellipsize="end"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="@dimen/normal_text_size"
-            app:layout_constraintBottom_toBottomOf="@id/audio_session_duration_label"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/audio_session_duration_label"
-            app:layout_constraintTop_toTopOf="@id/audio_session_duration_label"
-            tools:text="15mn 30s" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
