changed fab speeddial label chip background color to match buttons one, for better visibility added "click-outside" behaviour to fab speeddial to collapse the speed dial on screen touch

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="standard_toolbar_height">56dp</dimen>
+    <dimen name="standard_bottom_nav_bar_height">56dp</dimen>
     <dimen name="toolbar_standard_title_size">18sp</dimen>
 
     <!-- FAB -->
