--- a/commons/src/main/res/layout/layout_widget_fab_speed_dial_item.xml
+++ b/commons/src/main/res/layout/layout_widget_fab_speed_dial_item.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/mini_fab_label_height"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="?attr/colorSurface"
+        android:backgroundTint="?attr/colorAccent"
         android:textColor="?attr/colorOnSurface"
         android:textSize="@dimen/normal_text_size"
         app:ensureMinTouchTargetSize="false"
